--- a/FRONTEND/about-us.html
+++ b/FRONTEND/about-us.html
@@ -48,31 +48,39 @@
         </div>
     </div>
 
-    <div class="container-team">
-        <div class="member-profile">
-            <img src="images/avatar.jpg" alt="" style="width:100%">
-            <div class="member-desc">
-                <h4><b>John Doe</b></h4>
-                <p>Architect & Engineer</p>
-            </div>
-        </div>
+    <section class="information">
+        <h1><b>Information</b></h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti facere corporis officiis doloremque
+            laudantium iste cumque, accusamus aliquid, ipsum unde quisquam odio repellat! Architecto impedit rem
+            laudantium quae, veritatis non cum deserunt atque saepe fugiat, magni, soluta rerum dolores ab.</p>
 
-        <div class="member-profile">
-            <img src="images/avatar.jpg" alt="" style="width:100%">
-            <div class="member-desc">
-                <h4><b>John Doe</b></h4>
-                <p>Architect & Engineer</p>
+        <div class="container-info">
+            <div class="info-img">
+                <img src="images/courier-attaching-label.png" alt="">
+                <h3>berita</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque a nulla, necessitatibus architecto
+                    excepturi molestiae labore voluptates dolor debitis sed suscipit laudantium illum laboriosam maiores
+                    inventore placeat iusto eum reiciendis.</p>
+                <p>more</p>
+            </div>
+            <div class="info-img">
+                <img src="images/courier-attaching-label.png" alt="">
+                <h3>berita</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque a nulla, necessitatibus architecto
+                    excepturi molestiae labore voluptates dolor debitis sed suscipit laudantium illum laboriosam maiores
+                    inventore placeat iusto eum reiciendis.</p>
+                <p>more</p>
+            </div>
+            <div class="info-img">
+                <img src="images/courier-attaching-label.png" alt="">
+                <h3>berita</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque a nulla, necessitatibus architecto
+                    excepturi molestiae labore voluptates dolor debitis sed suscipit laudantium illum laboriosam maiores
+                    inventore placeat iusto eum reiciendis.</p>
+                <p>more</p>
             </div>
         </div>
-
-        <div class="member-profile">
-            <img src="images/avatar.jpg" alt="" style="width:100%">
-            <div class="member-desc">
-                <h4><b>John Doe</b></h4>
-                <p>Architect & Engineer</p>
-            </div>
-        </div>
-    </div>
+    </section>
 
     <footer>
         <div class="container-footer">
