--- a/FRONTEND/news2.html
+++ b/FRONTEND/news2.html
@@ -17,7 +17,8 @@
     <div class="container-navbar">
         <div class="navbar">
             <div class="logo">
-                <img src="images/swift-express.png" alt="">
+                <a href="index.html"><img src="images/swift-express.png" alt="logo">
+                </a>
             </div>
 
             <div class="menu">
@@ -26,9 +27,10 @@
                     <input type="search" id="search" placeholder="search...." class="search-bar">
                 </div>
                 <div class="menu-nav">
-                    <a href="index.html">Ship Now</a>
-                    <a href="#">Services</a>
-                    <a href="berita2.html">About Us</a>
+                    <a href="ship-now.html">Ship Now</a>
+                    <a href="services.html">Services</a>
+                    <a href="about-us.html">About Us</a>
+                    <a href="news.html">News</a>
                     <a href="our-team.html">Our Team</a>
                 </div>
             </div>
@@ -39,84 +41,52 @@
         </div>
     </div>
 
-    <!-- hero section -->
-    <div class="content-hero">
-        <div class="judul-hero-news">
-            <h1>BERITA & PROMO</h1><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae facere magnam officiis rem
-                laudantium iusto sit vitae sed vero impedit debitis, amet dicta voluptatum at. Expedita voluptates cum
-                atque? Molestias dolorem reiciendis, libero facilis cupiditate necessitatibus aspernatur debitis vero
-                officia.</p>
+    <!-- berita2 -->
+    <section class="berita2">
+        <h3>HOME/BERITA&PROMO/ Lorem ipsum dolor sit amet.</h3>
+        <div class="hero-berita2">
+            <img src="images/delivery-motorcycle.jpeg" alt="">
         </div>
-        <div class="bg-hero">
-            <img src="images/fast-delivery-truck.jpg" alt="">
-        </div>
-    </div>
-
-    <div class="container-search-news">
-        <div class="search-bar-news">
-            <i class="bi bi-search"></i>
-            <input type="text" id="search" placeholder="How to make money">
-            <button type="submit">Search</button>
-        </div>
-    </div>
-    <!-- hero section end -->
-
-    <!-- content -->
-    <section class="content-news">
-        <div class="container-content-news">
-
-            <div class="container-left-news">
-                <div class="judul-left-news">
-                    <h2>Our Highlight</h2>
-                </div>
-                <div class="container-img-left-news">
-                    <div class="content-left-news">
-                        <div class="img-news">
-                            <img src="images/avatar.jpg" alt="">
-                        </div>
-                        <div class="caption-img-news">
-                            <p>person - 03 -maret 2023</p>
-                            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, laborum!</h3>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia impedit quis tenetur
-                                iusto
-                                eius minus eum unde. Eos, id repellendus!</p>
-                        </div>
-                    </div>
-                    <div class="content-left-news">
-                        <div class="img-news">
-                            <img src="images/avatar.jpg" alt="">
-                        </div>
-                        <div class="caption-img-news">
-                            <p>person - 03 -maret 2023</p>
-                            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, laborum!</h3>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia impedit quis tenetur
-                                iusto
-                                eius minus eum unde. Eos, id repellendus!</p>
-                        </div>
-                    </div>
-                    <div class="content-left-news">
-                        <div class="img-news">
-                            <img src="images/avatar.jpg" alt="">
-                        </div>
-                        <div class="caption-img-news">
-                            <p>person - 03 -maret 2023</p>
-                            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, laborum!</h3>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia impedit quis tenetur
-                                iusto
-                                eius minus eum unde. Eos, id repellendus!</p>
-                        </div>
-                    </div>
-                </div>
+        <div class="container-info-berita2">
+            <div class="info-berita2">
+                <h2>PROMO | 14 Mounth 2023</h2>
             </div>
-            <div class="content-right-news">
-                <img src="images/girl-with-boxes-delivery-car.jpg" alt="">
+            <div class="sosmed">
+                <i class="bi bi-facebook"></i>
+                <i class="bi bi-instagram"></i>
+                <i class="bi bi-linkedin"></i>
+                <i class="bi bi-twitter"></i>
             </div>
         </div>
+
     </section>
-    <!-- content end -->
-
-    <!-- all article -->
+    <section class="capt">
+        <h1> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis, similique.</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ad eius praesentium veniam, beatae dolore odit
+            neque ullam autem quaerat porro nisi molestias sequi quae vitae voluptas soluta unde incidunt perferendis
+            laborum eos iste qui laboriosam! Veniam incidunt sequi quaerat cupiditate inventore corrupti illo iusto
+            accusamus ipsum, optio autem unde, sint maiores, necessitatibus nihil. Autem maiores numquam laboriosam iste
+            ea, assumenda aperiam soluta quisquam nobis dicta recusandae illo quaerat? Magnam doloremque numquam
+            delectus consectetur impedit iure animi ea rem eaque quae? Voluptates dolorem consequatur aliquam eaque nam
+            quis dolore fugit rem temporibus dignissimos ex quidem necessitatibus, rerum corrupti aut iusto eum
+            asperiores quibusdam, dolorum pariatur laboriosam qui ipsum. Id iusto velit excepturi maiores ad autem
+            reiciendis rem nam vero libero illo nobis nemo corporis molestias vitae adipisci maxime quaerat, commodi
+            modi temporibus itaque eaque mollitia consectetur eius? In atque totam vel laudantium aspernatur neque iste
+            nesciunt dicta quas perspiciatis voluptates sequi eius, exercitationem excepturi hic esse. Officiis tenetur
+            ducimus minima quis rerum eligendi illo natus, pariatur delectus, ipsam perferendis praesentium quidem, quos
+            iusto repudiandae excepturi ipsa libero! Debitis excepturi dolore recusandae facere autem nesciunt
+            consectetur est, et illum molestiae? Dignissimos cumque fugit perspiciatis. Aut eos temporibus, quo error
+            officiis ut, necessitatibus reiciendis distinctio sed minima odit, maiores excepturi. Natus ad ipsa error
+            ratione explicabo dolores aut reiciendis illo sit rem repellat nihil quo in adipisci repudiandae tempora
+            fugiat ullam, asperiores voluptate eligendi unde maiores dolorem! Vero quae accusamus eos sapiente facilis
+            delectus itaque perspiciatis iure, mollitia, a fuga. Dicta in nulla molestiae delectus optio rem nisi
+            corrupti quasi beatae quaerat ipsam eius, nam, nemo odit numquam, vitae perspiciatis adipisci assumenda
+            aliquid. Cumque itaque dolores autem reiciendis expedita dolorem aliquam similique tempore, repellendus
+            doloribus rerum, soluta nisi, dolorum earum ullam qui necessitatibus maiores! Voluptas rem minus numquam at,
+            laboriosam sed blanditiis.</p>
+        <h3>BACA JUGA : Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, quo?</h3>
+        <h3 class="tag">TAG : <span>PROMO</span> <span>BEBEK</span></h3>
+    </section>
     <section class="artikel">
         <h2>All Article</h2>
         <div class="container-artikel">
@@ -165,21 +135,22 @@
             <button type="button"><i class="bi bi-arrow-right"></i><button>
         </div>
     </section>
-    <!-- all article end -->
+    <!-- berita2 end-->
+
     <footer>
         <div class="container-footer">
 
             <div class="logo-footer">
-                <img src="images/swift-express.png" alt="">
+                <img src="images/swift-express.png" alt="logo">
             </div>
             <div class="footer-kanan">
                 <div class="company">
-                    <h1>company</h1>
+                    <h4>company</h4>
                     <p>Services</p>
                     <p>FAQ</p>
                 </div>
                 <div class="addres">
-                    <h1>address</h1>
+                    <h4>address</h4>
                     <p>info@gmail.com</p>
                     <p>085825577684</p>
                 </div>
@@ -188,7 +159,7 @@
     </footer>
     <div class="container-footer-bottom">
         <div class="footer-bottom">
-            <p>2023 wwwww.wwwwwwwww.www</p>
+            <p>2023 wwww.swiftexpress.com</p>
         </div>
         <div class="sosmed">
             <i class="bi bi-facebook"></i>
@@ -197,11 +168,6 @@
             <i class="bi bi-twitter"></i>
         </div>
     </div>
-
-
-
-
-
 </body>
 
 </html>
