--- a/FRONTEND/services.html
+++ b/FRONTEND/services.html
@@ -48,33 +48,65 @@
         </div>
     </div>
 
-    <div class="container-team">
-        <div class="member-profile">
-            <img src="images/avatar.jpg" alt="" style="width:100%">
-            <div class="member-desc">
-                <h4><b>John Doe</b></h4>
-                <p>Architect & Engineer</p>
-            </div>
-        </div>
-
-        <div class="member-profile">
-            <img src="images/avatar.jpg" alt="" style="width:100%">
-            <div class="member-desc">
-                <h4><b>John Doe</b></h4>
-                <p>Architect & Engineer</p>
-            </div>
-        </div>
-
-        <div class="member-profile">
-            <img src="images/avatar.jpg" alt="" style="width:100%">
-            <div class="member-desc">
-                <h4><b>John Doe</b></h4>
-                <p>Architect & Engineer</p>
-            </div>
-        </div>
+    <div class="services-title">
+        <h1>OUR SERVICES</h1>
+        <p>Choose the right service for you</p>
     </div>
 
-    <footer>
+    <Main>
+        <div class="container-services">
+            <div class="box-service">
+                <div class="front-face">
+                    <div class="icon"><i class="fa-solid fa-box"></i></div>
+                    <span>Reguler</span>
+                </div>
+                <div class="back-face">
+                    <span>Reguler</span>
+                    <p>Layanan pengiriman cepat dan terjangkau dengan biaya
+                        terjangkau.</p>
+                    <h2>3 - 4 Hari pengiriman</h2>
+                </div>
+            </div>
+            <div class="box-service">
+                <div class="front-face">
+                    <div class="icon"><i class="fa-solid fa-truck-fast"></i></div>
+                    <span>Express</span>
+                </div>
+                <div class="back-face">
+                    <span>Express</span>
+                    <p>Barang sepat sampai ditangan customer, lebih cepat dan menjadi 
+                    prioritas dalam proses pengiriman.</p>
+                    <h2>1 - 2 Hari pengiriman</h2>
+                </div>
+            </div>
+            <div class="box-service">
+                <div class="front-face">
+                    <div class="icon"><i class="fa-solid fa-hand-holding-heart"></i></div>
+                    <span>Same Day</span>
+                </div>
+                <div class="back-face">
+                    <span>Same Day</span>
+                    <p>Layanan pengiriman langsung sampai. Barang cepat sampai tujuan 
+                        di hari yang sama.</p>
+                    <h2>Hanya untuk pengiriman antar kota</h2>
+                </div>
+            </div>
+            <div class="box-service">
+                <div class="front-face">
+                    <div class="icon"><i class="fa-solid fa-cubes"></i></div>
+                    <span>Kargo</span>
+                </div>
+                <div class="back-face">
+                    <span>Kargo</span>
+                    <p>Layanan pengiriman barang dengan jumlah banyak
+                        atau engan ukuran besar dengan biaya terjangkau.</p>
+                    <h2>Berat minimum 10kg</h2>
+                </div>
+            </div>
+        </div>
+    </Main> 
+
+<footer>
         <div class="container-footer">
 
             <div class="logo-footer">
