--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -18,7 +18,8 @@
     <div class="container-navbar">
         <div class="navbar">
             <div class="logo">
-                <img src="images/swift-express.png" alt="">
+                <a href="index.html"><img src="images/swift-express.png" alt="logo">
+                </a>
             </div>
 
             <div class="menu">
@@ -27,9 +28,10 @@
                     <input type="search" id="search" placeholder="search...." class="search-bar">
                 </div>
                 <div class="menu-nav">
-                    <a href="#">Ship Now</a>
-                    <a href="berita.html">Services</a>
-                    <a href="berita2.html">About Us</a>
+                    <a href="ship-now.html">Ship Now</a>
+                    <a href="services.html">Services</a>
+                    <a href="about-us.html">About Us</a>
+                    <a href="news.html">News</a>
                     <a href="our-team.html">Our Team</a>
                 </div>
             </div>
@@ -49,13 +51,13 @@
     <section class="tracking-section">
         <div class="container-tracking">
             <div class="card">
-                <h1>Track your package</h1>
+                <h2>Track your package</h2>
                 <p>kode pengiriman</p>
                 <input type="text" id="lacak" placeholder="xxxxx-xxxx-xxx">
                 <button type="submit" class="button">LACAK</button>
             </div>
             <div class="card">
-                <h1>Check</h1>
+                <h2>Check</h2>
                 <div class="container-card-input">
                     <div class="card-input">
                         <p>lokasi penjemputan</p>
@@ -78,7 +80,7 @@
 
     <!-- why us -->
     <section class="whyUs">
-        <h1>WHY US</h1>
+        <h1><b>WHY US</b></h1>
         <div class="container-whyus">
             <div class="quote">,,</div>
 
@@ -175,8 +177,8 @@
         </div>
     </div>
 
-    <section class="informasi-terbaru">
-        <h1>Informasi Terbaru</h1>
+    <section class="information">
+        <h1><b>Information</b></h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti facere corporis officiis doloremque
             laudantium iste cumque, accusamus aliquid, ipsum unde quisquam odio repellat! Architecto impedit rem
             laudantium quae, veritatis non cum deserunt atque saepe fugiat, magni, soluta rerum dolores ab.</p>
@@ -184,27 +186,27 @@
         <div class="container-info">
             <div class="info-img">
                 <img src="images/courier-attaching-label.png" alt="">
-                <h2>berita</h2>
+                <h3>berita</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque a nulla, necessitatibus architecto
                     excepturi molestiae labore voluptates dolor debitis sed suscipit laudantium illum laboriosam maiores
-                    inventore placeat iusto eum reiciendis.</p>
-                <p>more</p>
+                    inventore placeat iusto eum reiciendis.</p><br>
+                <a href="news2.html"><b>more</b></a>
             </div>
             <div class="info-img">
                 <img src="images/courier-attaching-label.png" alt="">
-                <h2>berita</h2>
+                <h3>berita</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque a nulla, necessitatibus architecto
                     excepturi molestiae labore voluptates dolor debitis sed suscipit laudantium illum laboriosam maiores
-                    inventore placeat iusto eum reiciendis.</p>
-                <p>more</p>
+                    inventore placeat iusto eum reiciendis.</p><br>
+                <a href="news2.html"><b>more</b></a>
             </div>
             <div class="info-img">
                 <img src="images/courier-attaching-label.png" alt="">
-                <h2>berita</h2>
+                <h3>berita</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque a nulla, necessitatibus architecto
                     excepturi molestiae labore voluptates dolor debitis sed suscipit laudantium illum laboriosam maiores
-                    inventore placeat iusto eum reiciendis.</p>
-                <p>more</p>
+                    inventore placeat iusto eum reiciendis.</p><br>
+                <a href="news2.html"><b>more</b></a>
             </div>
         </div>
     </section>
@@ -214,16 +216,16 @@
         <div class="container-footer">
 
             <div class="logo-footer">
-                <img src="images/swift-express.png" alt="">
+                <img src="images/swift-express.png" alt="logo">
             </div>
             <div class="footer-kanan">
                 <div class="company">
-                    <h1>company</h1>
+                    <h4>company</h4>
                     <p>Services</p>
                     <p>FAQ</p>
                 </div>
                 <div class="addres">
-                    <h1>address</h1>
+                    <h4>address</h4>
                     <p>info@gmail.com</p>
                     <p>085825577684</p>
                 </div>
@@ -232,7 +234,7 @@
     </footer>
     <div class="container-footer-bottom">
         <div class="footer-bottom">
-            <p>2023 wwwww.wwwwwwwww.www</p>
+            <p>2023 wwww.swiftexpress.com</p>
         </div>
         <div class="sosmed">
             <i class="bi bi-facebook"></i>
