our-team has changed

--- a/FRONTEND/our-team.html
+++ b/FRONTEND/our-team.html
@@ -50,7 +50,31 @@
 
     <div class="container-team">
         <div class="member-profile">
-            <img src="images/avatar.jpg" alt="" style="width:100%">
+            <img src="images/Marsyanda.jpeg" alt="">
+            <div class="member-desc">
+                <h4><b>Marsyanda Razita</b></h4>
+                <p>Project Leader</p>
+            </div>
+        </div>
+
+        <div class="member-profile">
+            <img src="images/Bagus.jpg" alt="">
+            <div class="member-desc">
+                <h4><b>Bagus Wicaksana</b></h4>
+                <p>Back-End Developer</p>
+            </div>
+        </div>
+
+        <div class="member-profile">
+            <img src="images/Margarita.jpg" alt="">
+            <div class="member-desc">
+                <h4><b>Margarita Fafo</b></h4>
+                <p>Quality Assurance</p>
+            </div>
+        </div>
+
+        <div class="member-profile">
+            <img src="images/avatar.jpg" alt="">
             <div class="member-desc">
                 <h4><b>John Doe</b></h4>
                 <p>Architect & Engineer</p>
@@ -58,7 +82,7 @@
         </div>
 
         <div class="member-profile">
-            <img src="images/avatar.jpg" alt="" style="width:100%">
+            <img src="images/avatar.jpg" alt="">
             <div class="member-desc">
                 <h4><b>John Doe</b></h4>
                 <p>Architect & Engineer</p>
@@ -66,7 +90,7 @@
         </div>
 
         <div class="member-profile">
-            <img src="images/avatar.jpg" alt="" style="width:100%">
+            <img src="images/avatar.jpg" alt="">
             <div class="member-desc">
                 <h4><b>John Doe</b></h4>
                 <p>Architect & Engineer</p>
