--- a/FRONTEND/login.html
+++ b/FRONTEND/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sliding Login Form</title>
-    <link rel="stylesheet" type="text/css" href="LoginStyle.css">
+    <link rel="stylesheet" type="text/css" href="./CSS/LoginStyle.css">
     <script src="https://kit.fontawesome.com/48ba85b5e8.js" crossorigin="anonymous"></script>
     
 </head>
