--- a/FRONTEND/news2.html
+++ b/FRONTEND/news2.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="login">
-                <a href="#" class="login-button">Login</a>
+                <a href="login.html" class="login-button">Login</a>
                 <a href="EN">EN</a>
             </div>
         </div>
