--- a/FRONTEND/about-us.html
+++ b/FRONTEND/about-us.html
@@ -43,44 +43,60 @@
     </div>
 
     <div class="content2">
-        <div class="hero">
-            <h1>BANNER PROMO</h1>
+        <div class="hero-about-us">
+            <h1>BANNER</h1>
         </div>
     </div>
 
-    <section class="information">
-        <h1><b>Information</b></h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti facere corporis officiis doloremque
-            laudantium iste cumque, accusamus aliquid, ipsum unde quisquam odio repellat! Architecto impedit rem
-            laudantium quae, veritatis non cum deserunt atque saepe fugiat, magni, soluta rerum dolores ab.</p>
-
-        <div class="container-info">
-            <div class="info-img">
-                <img src="images/courier-attaching-label.png" alt="">
-                <h3>berita</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque a nulla, necessitatibus architecto
-                    excepturi molestiae labore voluptates dolor debitis sed suscipit laudantium illum laboriosam maiores
-                    inventore placeat iusto eum reiciendis.</p>
-                <p>more</p>
-            </div>
-            <div class="info-img">
-                <img src="images/courier-attaching-label.png" alt="">
-                <h3>berita</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque a nulla, necessitatibus architecto
-                    excepturi molestiae labore voluptates dolor debitis sed suscipit laudantium illum laboriosam maiores
-                    inventore placeat iusto eum reiciendis.</p>
-                <p>more</p>
-            </div>
-            <div class="info-img">
-                <img src="images/courier-attaching-label.png" alt="">
-                <h3>berita</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque a nulla, necessitatibus architecto
-                    excepturi molestiae labore voluptates dolor debitis sed suscipit laudantium illum laboriosam maiores
-                    inventore placeat iusto eum reiciendis.</p>
-                <p>more</p>
-            </div>
+ <!-- TENTANG -->
+ <section>
+    <div class="container-tentang">
+        <div class="tentang">
+            <h1>Tentang Swift</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur, voluptatibus accusantium,
+                distinctio at
+                delectus recusandae quis culpa quae nam excepturi voluptate et deserunt. Rem dolor voluptatibus
+                excepturi
+                eaque adipisci odio hic quasi beatae! Quo placeat quam similique totam, expedita, praesentium nihil
+                ullam
+                ex, voluptas assumenda perspiciatis eaque id dolor sequi!</p>
         </div>
-    </section>
+        <div class="img-about">
+            <img src="images/avatar.jpg" alt="">
+        </div>
+    </div>
+</section>
+<!-- TENTANG END -->
+<!-- visi misi -->
+<section class="visi-misi-page">
+    <h1 class="visi-misi">VISI & MISI</h1>
+    <div class="container-visi-misi">
+        <div class="icon-lamp">
+            <img src="images/Vector-lamp.png" alt="">
+        </div>
+        <div class="visi">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore delectus expedita explicabo sint quae
+            error laboriosam itaque saepe quaerat nobis, ipsum eligendi optio odio ut! Commodi fugiat eum beatae
+            facere pariatur officiis molestiae excepturi odio, suscipit perspiciatis vitae cupiditate velit vel. Non
+            necessitatibus similique odio, distinctio eaque nam velit ratione!
+        </div>
+        <div class="misi">
+            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, quibusdam!</h4>
+            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, quibusdam!</h4>
+            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, quibusdam!</h4>
+        </div>
+    </div>
+</section>
+<!-- visi misi end -->
+
+<!-- cabang kami -->
+<section>
+    <h1>Cabang Kami</h1>
+    <div class="img-cabang-kami">
+        <img src="images/peta.png" alt="">
+    </div>
+</section>
+<!-- cabang kami end -->
 
     <footer>
         <div class="container-footer">
