--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="card">
                 <h2>Track your package</h2>
                 <p>kode pengiriman</p>
-                <input type="text" id="lacak" placeholder="xxxxx-xxxx-xxx">
+                <input type="text" id="lacak" placeholder="xxx-xxxx-xxx">
                 <button type="submit" class="open-button-lacak">LACAK</button>
                 <div class="modal">
                     <dialog class="modal-lacak" id="modal-lacak"> 
@@ -64,11 +64,11 @@
                             <table class="table-lacak">
                                 <thead>
                                   <tr>
-                                    <th>No Resi</th>
-                                    <th>Asal</th>
-                                    <th>Tujuan</th>
-                                    <th>Pengirim</th>
-                                    <th>Penerima</th>
+                                    <th>Receipt Number</th>
+                                    <th>Origin</th>
+                                    <th>Destination</th>
+                                    <th>Sender</th>
+                                    <th>Recipient</th>
                                     <th>Status</th>
                                   </tr>
                                 </thead>
