--- a/contact.html
+++ b/contact.html
@@ -40,10 +40,10 @@
         </div>
     </div>
     
-    <div class="container-contact">
+    <div class="container-contact" id="container-message">
         <div class="wrapper">
             <h2>CONTACT US</h2>
-            <form action="" method="post">
+            <form action="" method="post" id="message">
                 <div class="form-group">
                     <label for="">Full Name</label>
                     <input type="text">
