edit output cek harga

--- a/index.html
+++ b/index.html
@@ -58,35 +58,35 @@
                 <input type="text" id="lacak" placeholder="xxx-xxxx-xxx">
                 <button type="submit" onclick="fetchReceiptById()" class="open-button-lacak">LACAK</button>
                 <div class="modal">
-                    <dialog class="modal-lacak" id="modal-lacak"> 
+                    <dialog class="modal-lacak" id="modal-lacak">
                         <h1>Hasil Pencarian</h1>
                         <div>
                             <table class="table-lacak">
                                 <thead>
-                                  <tr>
-                                    <th>Receipt Number</th>
-                                    <th>Origin</th>
-                                    <th>Destination</th>
-                                    <th>Sender</th>
-                                    <th>Recipient</th>
-                                    <th>Status</th>
-                                  </tr>
+                                    <tr>
+                                        <th>Receipt Number</th>
+                                        <th>Origin</th>
+                                        <th>Destination</th>
+                                        <th>Sender</th>
+                                        <th>Recipient</th>
+                                        <th>Status</th>
+                                    </tr>
                                 </thead>
                                 <tbody>
-                                  <tr>
-                                    <td>1002351455</td>
-                                    <td>Surabaya</td>
-                                    <td>Jakarta</td>
-                                    <td>Rachel</td>
-                                    <td>Bima Putra</td>
-                                    <td>On Process</td>
-                                  </tr>
+                                    <tr>
+                                        <td>1002351455</td>
+                                        <td>Surabaya</td>
+                                        <td>Jakarta</td>
+                                        <td>Rachel</td>
+                                        <td>Bima Putra</td>
+                                        <td>On Process</td>
+                                    </tr>
                                 </tbody>
-                              </table>
+                            </table>
                         </div>
                         <button class="close-button-lacak">Kembali</button>
                     </dialog>
-                    </div>
+                </div>
             </div>
             <div class="card">
                 <h2>Check</h2>
@@ -159,40 +159,18 @@
                     <div class="popup-content">
                         <span class="close" onclick="closePopup()">&times;</span>
                         <h1>CEK</h1>
-                        <div id="hasil-pengiriman">
-                            <div id="hasil-pengiriman">
-                                <table width=100%>
-                                    <tr>
-                                        <th>LOKASI AWAL</th>
-                                        <th>LOKASI TUJUAN</th>
-                                        <th>BERAT</th>
-                                        <th>LAYANAN</th>
-                                        <th>HARGA</th>
-                                    </tr>
-                                    <tr>
-                            </div>
 
-                            <td><span id="lokasi-awal"></span> </td>
-                            <td> <span id="lokasi-tujuan"></span></td>
-                            <td><span id="berat-hasil"></span></td>
-                            <td> <span id="layanan"></span></td>
-                            <td><span id="harga"></span></td>
-                            </tr>
-                            </table>
+                        <div id="hasil-pengiriman">
+                            <input type="text" class="" placeholder="ASAL">
+                            <input type="text" class="" placeholder="TUJUAN">
+                            <input type="text" class="" placeholder="BERAT">
+                            <input type="text" class="" placeholder="TOTAL">
                         </div>
                     </div>
                 </div>
             </div>
-
-
-
-
-        </div>
-
-        </div>
         </div>
     </section>
-
 
     <!-- why us -->
     <section class="whyUs">
@@ -201,7 +179,6 @@
             <div class="quote">,,</div>
 
             <div class="container-testi">
-
                 <div class="testi">
                     <div class="img-testi">
                         <i class="bi bi-emoji-smile"></i>
@@ -231,9 +208,7 @@
                         <p>0000000000</p>
                     </div>
                 </div>
-
             </div>
-
             <div class="container-content-kanan">
                 <div class="content-kanan">
                     <img src="images/testimonial 1.jpg" alt="">
@@ -256,73 +231,29 @@
                     <h4>personal</h4>
                     <p>place name</p>
                 </div>
-            </div>
-        </div>
-    </section>
-
-    <div class="container-content3">
-        <div class="container-caption">
-            <div class="caption">
-                <i class="bi bi-truck"></i>
-                <h4>Pengiriman Cepat</h4>
-            </div>
-        </div>
-        <div class="container-caption">
-            <div class="caption">
-                <i class="bi bi-geo-alt-fill"></i>
-                <h4>Menjangkau Banyak Tempat</h4>
-            </div>
-        </div>
-        <div class="container-caption">
-            <div class="caption">
-                <i class="bi bi-box"></i>
-                <h4>Banyak Pilihan Pengiriman</h4>
-            </div>
-        </div>
-        <div class="container-caption">
-            <div class="caption">
-                <i class="bi bi-house-fill"></i>
-                <h4>Pengiriman Aman Sampai Tujuan</h4>
-            </div>
-        </div>
-        <div class="container-caption">
-            <div class="caption">
-                <img src="images/Vector.png" alt="">
-                <h4>24 Jam Siap Menerima Keluhan</h4>
-            </div>
-        </div>
-    </div>
-
-    <section class="information">
-        <h1><b>Information</b></h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti facere corporis officiis doloremque
-            laudantium iste cumque, accusamus aliquid, ipsum unde quisquam odio repellat! Architecto impedit rem
-            laudantium quae, veritatis non cum deserunt atque saepe fugiat, magni, soluta rerum dolores ab.</p>
-
-        <div class="container-info">
-            <div class="info-img">
-                <img src="images/courier-attaching-label.png" alt="">
-                <h3>berita</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque a nulla, necessitatibus architecto
-                    excepturi molestiae labore voluptates dolor debitis sed suscipit laudantium illum laboriosam maiores
-                    inventore placeat iusto eum reiciendis.</p><br>
-                <a href="news2.html"><b>more</b></a>
-            </div>
-            <div class="info-img">
-                <img src="images/courier-attaching-label.png" alt="">
-                <h3>berita</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque a nulla, necessitatibus architecto
-                    excepturi molestiae labore voluptates dolor debitis sed suscipit laudantium illum laboriosam maiores
-                    inventore placeat iusto eum reiciendis.</p><br>
-                <a href="news2.html"><b>more</b></a>
-            </div>
-            <div class="info-img">
-                <img src="images/courier-attaching-label.png" alt="">
-                <h3>berita</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque a nulla, necessitatibus architecto
-                    excepturi molestiae labore voluptates dolor debitis sed suscipit laudantium illum laboriosam maiores
-                    inventore placeat iusto eum reiciendis.</p><br>
-                <a href="news2.html"><b>more</b></a>
+                <div class="content-kanan">
+                    <img src="images/testimonial 1.jpg">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed sunt veniam excepturi, porro
+                        praesentium corporis ducimus accusamus hic nostrum architecto!</p>
+                    <h4>personal</h4>
+                    <p>place name</p>
+                </div>
+                <div class="content-kanan">
+                    <img src="images/testimonial 2.jpg">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed sunt veniam excepturi, porro
+                        praesentium corporis ducimus accusamus hic nostrum architecto!</p>
+                    <h4>personal</h4>
+                    <p>place name</p>
+                </div>
+                <div class="content-kanan">
+                    <img src="images/tetsimonial 3.jpg">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed sunt veniam excepturi, porro
+                        praesentium corporis ducimus accusamus hic nostrum architecto!</p>
+                    <h4>personal</h4>
+                    <p>place name</p>
+                </div>
+                <button class="kiri"> <i class="bi bi-chevron-left"></i></button>
+                <button class="kanan"> <i class="bi bi-chevron-right"></i></button>
             </div>
         </div>
     </section>
