--- a/news.html
+++ b/news.html
@@ -128,8 +128,7 @@
                 <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, sequi?</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit consectetur inventore consequuntur
                     atque repellendus. Aperiam delectus amet voluptatem autem eos labore exercitationem, molestiae
-                    placeat ut hic molestias earum harum fugiat culpa possimus obcaecati saepe, dolor cumque enim ipsam.
-                    Ipsa, provident.</p>
+                    placeat ut.</p>
             </div>
             <div class="artikel-img">
                 <img src="images/cargo-ship.jpg" alt="">
@@ -141,8 +140,7 @@
                 <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, sequi?</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit consectetur inventore consequuntur
                     atque repellendus. Aperiam delectus amet voluptatem autem eos labore exercitationem, molestiae
-                    placeat ut hic molestias earum harum fugiat culpa possimus obcaecati saepe, dolor cumque enim ipsam.
-                    Ipsa, provident.</p>
+                    placeat ut .</p>
             </div>
             <div class="artikel-img">
                 <img src="images/cargo-ship.jpg" alt="">
@@ -154,14 +152,10 @@
                 <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, sequi?</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit consectetur inventore consequuntur
                     atque repellendus. Aperiam delectus amet voluptatem autem eos labore exercitationem, molestiae
-                    placeat ut hic molestias earum harum fugiat culpa possimus obcaecati saepe, dolor cumque enim ipsam.
-                    Ipsa, provident.</p>
+                    placeat ut</p>
             </div>
         </div>
-        <div class="arrow">
-            <button type="button"><i class="bi bi-arrow-left"></i></button>
-            <button type="button"><i class="bi bi-arrow-right"></i><button>
-        </div>
+      
     </section>
  <!-- all article end -->
 
