--- a/contact.html
+++ b/contact.html
@@ -44,26 +44,28 @@
         <div class="wrapper">
             <h2>CONTACT US</h2>
             <form action="" method="post" id="message">
+
                 <div class="form-group">
                     <label for="">Full Name</label>
-                    <input type="text">
+                    <input type="text" id="contactUs-name">
                 </div>
                 <div class="form-group">
                     <label for="">Email Address</label>
-                    <input type="email">
+                    <input type="email" id="contactUs-email">
                 </div>
                 <div class="form-group">
                     <label for="">Subject</label>
-                    <input type="text">
+                    <input type="text" id="contactUs-subject">
                 </div>
                 <div class="form-group">
                     <label for="">Message</label>
-                    <textarea name="" id="" rows="5" placeholder="Type your message here..."></textarea>
+                    <textarea id="contactUs-theMessage" rows="5" placeholder="Type your message here..."></textarea>
                 </div>
 
                 <div class="form-group">
-                    <button type="submit" class="submit">Send Message</button>
+                    <button type="submit" class="submit" onclick="createMessage()">Send Message</button>
                 </div>
+
             </form>
         </div>
     </div>
